--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.11",
         "classnames": "^2.5.1",
+        "events": "^3.3.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     },
